# hrecursion-schemes

./: default.nix  hrecursion-schemes.cabal  shell.nix
src/Data/HFunctor/: Foldable.hs
