name:                hrecursion-schemes
version:             0.1.0.0
synopsis:            Higher order recursion schemes
description:         Recursion schemes that work on higher order functors, this extends recursion-schemes to work
                     on GADTs, mutually recursive datatypes, and polymorphically recursive datatypes.
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.HFunctor.Foldable
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
